tests/pos/simple/bool-02.ts
/*@ foo :: () => { void | 0 < 1 } */
function foo() {
  if ( true && false ) {
    
    assert(false);
  
  }
}
