tests/neg/simple/fun-05.ts

/*@ foo2 :: () => () => { undefined | 0 < 1 } */
function foo2() {
  assert(false);
  return function() { return undefined }
}
